@@ -33,6 +33,11 @@ void SelectionController::notifyAccessibilityForSelectionChange()
     if (AXObjectCache::accessibilityEnabled() && m_selection.start().isNotNull() && m_selection.end().isNotNull()) {
         RenderObject* focusedNode = m_selection.end().node()->renderer();
         AccessibilityObject* accessibilityObject = m_frame->document()->axObjectCache()->getOrCreate(focusedNode);
+
+        // need to check this as getOrCreate could return 0
+        if (!accessibilityObject)
+            return;
+
         int offset;
         // Always report the events w.r.t. the non-linked unignored parent. (i.e. ignoreLinks == true)
         AccessibilityObject* object = objectAndOffsetUnignored(accessibilityObject, offset, true);
