@@ -1,3 +1,15 @@
+2010-07-01  Mario Sanchez Prada  <msanchez@igalia.com>
+
+        Reviewed by Xan Lopez.
+
+        [GTK] Extra nullcheck needed at SelectionControllerGtk.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=41447
+
+        Extra null check added.
+
+        * editing/gtk/SelectionControllerGtk.cpp:
+        (WebCore::SelectionController::notifyAccessibilityForSelectionChange):
+
 2010-07-01  Yury Semikhatsky  <yurys@chromium.org>
 
         Reviewed by Adam Barth.
